# projetAnnuel2022

./: .gitignore  README.md
android/: local.properties  settings.gradle
android/app/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
documents/: scriptCreationBdd.sql  transactions.xlsx  trello.txt
javaApp/: .gitignore
javaFXApp/: build.gradle  settings.gradle  stayLogged.txt  token.txt
mvcWebsite/Public/: .gitignore  index.php
mvcWebsite/Public/includes/: headInfo.php  header.php
mvcWebsite/api/controllers/: Login.php  home.php
mvcWebsite/api/database/: .gitignore  DbLink.php
mvcWebsite/api/models/: Partner.php  User.php
mvcWebsite/api/scripts/: .gitignore  include_scripts.php  sanitizeStringQuotes.php  signout.php  verif_signin.php  verif_signup.php
mvcWebsite/api/views/: account.php  home.php  shop.php  test.php
serverDataTransfer/: .gitignore  CMakeLists.txt  README.md  localDB.sql  macros.h  main.c
serverDataTransfer/communications/: commsSafety.c  commsSafety.h
serverDataTransfer/dataParsing/: parseData.c  parseData.h
serverDataTransfer/output/: output.c  output.h
website/: account.php  index.php  shop.php  signin.php  signup.php  verif_signin.php
website/css/: styles.css
website/includes/: footer.php  header.php
website/scripts/: include_scripts.php  verif_creation_entreprise.php  verif_signin.php  verif_signup.php
website/scripts/Classes/: DbLink.php  Users.php
website/scripts/includes/: const.php  formSecurity.php  preparePassword.php
website/src/: index.php
website/src/css/: styles.css
website/src/includes/: footer.php  header.php
websiteAndApi/Public/: .htaccess  blabla.php  blank.php  error.php  index.php
websiteAndApi/Public/css/: styles.css
websiteAndApi/Public/includes/: footer.php  headInfo.php  header.php
websiteAndApi/Public/scripts/: account.js  accountRequest.js  addToCart.js  cart.js  catalogRequests.js  checkTokenValidity.js  const.js  formActions.js  getUserData.js  (+4 more)
(+81 files in other folders)
